<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enqueue"
        android:id="@+id/enqueue"
        android:singleLine="false"
        android:layout_marginBottom="53dp"
        android:layout_above="@+id/dequeue"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/button_selector_enqueue"
        android:elegantTextHeight="false"
        android:typeface="monospace" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dequeue"
        android:id="@+id/dequeue"
        android:typeface="monospace"
        android:background="@drawable/button_selector_dequeue"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/enqueue"
        android:layout_toStartOf="@+id/enqueue" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/plane_name_text"
        android:id="@+id/planenametext"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/plannenameedittext"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/planenametext"
        android:layout_alignRight="@+id/enqueue"
        android:layout_alignEnd="@+id/enqueue"
        android:hint="Enter Name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/plane_type_text"
        android:id="@+id/planetypetext"
        android:layout_below="@+id/plannenameedittext"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/planetypetext"
        android:layout_alignLeft="@+id/plannenameedittext"
        android:layout_alignStart="@+id/plannenameedittext"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@+id/planesizetext"
        android:id="@+id/plane_type_radio_group">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passenger_plane_radio"
            android:id="@+id/passengerplaneradio"
            android:checked="true" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cargo_plane_radio"
            android:id="@+id/cargoplaneradio" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/plane_size_text"
        android:id="@+id/planesizetext"
        android:layout_below="@+id/planetypetext"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="63dp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/plane_type_radio_group"
        android:layout_alignLeft="@+id/plane_type_radio_group"
        android:layout_alignStart="@+id/plane_type_radio_group"
        android:layout_above="@+id/enqueue"
        android:id="@+id/plane_size_radio_group">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plane_large_radio"
            android:id="@+id/planelargeradio"
            android:checked="true" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plane_small_radio"
            android:id="@+id/planesmallradio"
            android:singleLine="true" />
    </RadioGroup>

</RelativeLayout>
